[package]
name = "mief"
version = "0.0.0"
authors = ["BMeu <bastian@bastianmeyer.eu>"]
description = "Mief is a Pong clone written in Rust."
repository = "https://github.com/BMeu/Mief"
readme = "README.md"
documentation = "https://docs.rs/mief/"
license = "MIT/Apache-2.0"
keywords = ["pong", "clone"]
categories = ["games"]

[badges]
appveyor = { repository = "BMeu/mief" }
travis-ci = { repository = "BMeu/Mief" }

[[bin]]
name = "mief"

[dependencies]
find_folder = "0.3"
piston_window = "0.65"
rand = "0.3"

[dev-dependencies]
quickcheck = "0.4"
